# ChangeLog for sci-mathematics/axiom
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/axiom/ChangeLog,v 1.11 2006/08/25 11:12:08 metalgod Exp $

  25 Aug 2006; Luis Medinas <metalgod@gentoo.org> axiom-3.9-r1.ebuild:
  Added ~amd64 keyword.

  27 Apr 2006; Alec Warner <antarus@gentoo.org> Manifest:
  Fixing SHA256 digest, pass four

  18 Mar 2006; <plasmaroo@gentoo.org> axiom-3.9-r1.ebuild, -axiom-3.9.ebuild,
  -axiom-9999.ebuild:
  Fix #121430, remove stale versions.

*axiom-3.9-r1 (25 Feb 2006)

  25 Feb 2006; <plasmaroo@gentoo.org> +axiom-3.9-r1.ebuild,
  +files/noweb-2.9-insecure-tmp-file.Makefile.patch,
  +files/noweb-2.9-insecure-tmp-file.patch.input:
  Security bump; bug #122705.

  14 Feb 2006; <plasmaroo@gentoo.org> axiom-3.9.ebuild, axiom-9999.ebuild:
  Port over to modular X.

  22 Jan 2006; <plasmaroo@gentoo.org> axiom-3.9.ebuild,
  +files/gcl-2.6.7.fix-configure.in-gentoo.Makefile.patch,
  +files/gcl-2.6.7.fix-configure.in-gentoo.patch.input:
  Fix #118633.

  30 Dec 2005; <plasmaroo@gentoo.org> axiom-3.9.ebuild, axiom-9999.ebuild:
  Fix #117216.

*axiom-3.9 (29 Dec 2005)

  29 Dec 2005; <plasmaroo@gentoo.org> +axiom-3.9.ebuild:
  Add snapshot; bug #117097.

  13 Dec 2005; <plasmaroo@gentoo.org> axiom-9999.ebuild:
  Update Savannah CVS info; #115327.

  04 Dec 2005; <plasmaroo@gentoo.org> axiom-9999.ebuild,
  +files/gcl-2.6.7.fix-out-of-build-root-compile.Makefile.patch,
  +files/gcl-2.6.7.fix-out-of-build-root-compile.patch.input:
  Add compile fixes (#75372, #111923) as well as a gcl fix so compilation works
  once we're out of the sandbox.

*axiom-9999 (16 Jan 2005)

  16 Jan 2005; <plasmaroo@gentoo.org> +axiom-9999.ebuild, +metadata.xml:
  Initial commit.